--- a/tox.ini
+++ b/tox.ini
@@ -5,11 +5,11 @@ envlist = pep8,pypy,pypy3,py27,py34,py35,py36,py37
 usedevelop = True
 deps =
     mock
-    nose
+    nose2
     parameterized
     termcolor
 commands =
-    nosetests {posargs} --verbosity 2 tests
+    nose2 {posargs} -s tests
 
 [testenv:pep8]
 deps =
